# azure-docdb

./: .gitignore  LICENSE  README.md  azure-docdb.cabal
lib/Azure/: DocDB.hs
lib/Azure/DocDB/: Auth.hs  DBResourceId.hs  DBSocketMonad.hs  DocDBAuth.hs  DocumentStore.hs  ETag.hs  ResourceId.hs  ServiceHeader.hs  SessionMonad.hs  SocketMonad.hs  Store.hs
lib/Azure/DocDB/SocketMonad/: Class.hs  DBSessionT.hs  DBSocketT.hs
lib/Azure/DocDB/Store/: DBDocument.hs  List.hs
src/: Main.hs  settings.hs  settings.js
